Fix input for `ShowLog`
For whatever reason, PowerShell now suddenly thinks the input is no longer good enough and spits out a big type error.

```
Cannot process argument transformation on parameter 'ShowLog'. Cannot
convert value "System.Management.Automation.PSCustomObject" to type
"System.Management.Automation.SwitchParameter". Boolean parameters
accept only Boolean values and numbers, such as $True, $False, 1 or 0.
```

--- a/action.yml
+++ b/action.yml
@@ -36,11 +36,12 @@ runs:
         MSSQL_AGENT_ENABLED: "true"
       run: |
         Write-Output "Getting variables for suite"
+        $showLog = "${{ inputs.show-log }}" -eq "true"
 
         $params = @{
             Install         = ("${{ inputs.install }}" -split ",").Trim()
             SaPassword      = "${{ inputs.sa-password }}"
-            ShowLog         = ${{ inputs.show-log }}
+            ShowLog         = $showLog
             Collation       = "${{ inputs.Collation }}"
             Version         = "${{ inputs.Version }}"
         }
